# RawC

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
examples/: CMakeLists.txt  ctype.c  ctypeh.c  stdbool.c  stdio.c  stdioh.c
src/: _ctype.h  _stdbool.h  _stdio.h  _string.h
src/arm/: syscalls.h
src/x86/: syscalls.h
src/x86_64/: syscalls.h
