# CMakeLists.txt
# 
# This file is part of the RawC project.
#
# Author: ruxixa
#
# Date: 20.05.2024

project(RawC)

# Add the source files
add_executable(stdio   stdio.c)      # stdio.h remake example
add_executable(ctype   ctype.c)      # ctype.h remake example
add_executable(stdbool stdbool.c)    # stdbool.h remake example

